# data-diverse

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  data-distinct.cabal  data-diverse.cabal  stack.yaml  updatePackageId.sh
bench/: Bench.hs
bench/Data/Diverse/: ManyBench.hs  WhichBench.hs
src/Data/: Distinct.hs  Diverse.hs
src/Data/Distinct/: Catalog.hs  Many.hs  TypeLevel.hs
src/Data/Distinct/Catalog/: Internal.hs
src/Data/Distinct/Many/: Internal.hs
src/Data/Distinct/TypeLevel/: Internal.hs
src/Data/Diverse/: AFoldable.hs  AFunctor.hs  ATraversable.hs  Case.hs  CaseFunc.hs  CaseIxed.hs  CaseTypeable.hs  Cases.hs  Collector.hs  Distinct.hs  Emit.hs  Many.hs  Nary.hs  PackageId.hs  Profunctor.hs  Reduce.hs  Reiterate.hs  Type.hs  TypeLevel.hs  Which.hs
src/Data/Diverse/Class/: AFoldable.hs  Case.hs  Emit.hs  Item.hs  Project.hs  Reduce.hs  Reiterate.hs
src/Data/Diverse/Data/: Assemble.hs  CaseTypeable.hs  Collector.hs  WrappedAny.hs
src/Data/Diverse/Distinct/: Catalog2.hs  Many.hs
src/Data/Diverse/Distinct/Catalog/: Internal.hs
src/Data/Diverse/Distinct/Catalog2/: Internal.hs
src/Data/Diverse/Distinct/Many/: Internal.hs
src/Data/Diverse/Instance/: Assemble.hs
src/Data/Diverse/Many/: Internal.hs
src/Data/Diverse/Nary/: Internal.hs
src/Data/Diverse/Old/: Catalog.hs
src/Data/Diverse/Old/Catalog/: Internal.hs
src/Data/Diverse/Type/: Internal.hs
src/Data/Diverse/TypeLevel/: Internal.hs
src/Data/Diverse/Which/: Internal.hs
test/: Spec.hs
test/Data/Diverse/: ManySpec.hs  TypeSpec.hs  WhichSpec.hs
