name:                data-distinct
version:             0.1.0.0
synopsis:            Polymorphic variants and extensible records indexed by distinct field types.
description:         Polymorhpic variants and extensible records where duplicate field types are not permitted.
homepage:            https://github.com/louispan/data-distinct#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Data, Records
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Data.Distinct
                       Data.Distinct.Catalog
                       Data.Distinct.Catalog.Internal
                       Data.Distinct.Many
                       Data.Distinct.Many.Internal
                       Data.Distinct.TypeLevel
                       Data.Distinct.TypeLevel.Internal
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim >= 0.5 && < 1
                     , lens >= 4 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite data-distinct-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , data-distinct
                     , hspec >= 2 && < 3
                     , lens >= 4 && < 5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/data-distinct
