name:                data-diverse
version:             0.4.0.0
synopsis:            Extensible records and polymorphic variants.
description:         "Data.Diverse.Many" is an extensible record for any size encoded efficiently as (Int, Map Int Any).
                     "Data.Diverse.Which" is a polymorphic variant of possibilities encoded as (Int, Any).
                     Provides getters, setters, projection, injection, fold, and catamorphisms;
                     accessed by type or index.
                     Refer to [ManySpec.hs](https://github.com/louispan/data-diverse/blob/master/test/Data/Diverse/ManySpec.hs) and [WhichSpec.hs](https://github.com/louispan/data-diverse/blob/master/test/Data/Diverse/WhichSpec.hs) for example usages.
homepage:            https://github.com/louispan/data-diverse#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Data, Records
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Data.Diverse
                       Data.Diverse.AFoldable
                       Data.Diverse.Case
                       Data.Diverse.Cases
                       Data.Diverse.CaseTypeable
                       Data.Diverse.Many
                       Data.Diverse.Many.Internal
                       Data.Diverse.Reduce
                       Data.Diverse.Reiterate
                       Data.Diverse.Type
                       Data.Diverse.Which
                       Data.Diverse.Which.Internal
  other-modules:       Data.Diverse.Type.Internal
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 0.6
                     , ghc-prim >= 0.5 && < 1
                     , lens >= 4 && < 5
                     , tagged >= 0.8.5 && < 1
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite data-diverse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Diverse.ManySpec
                       Data.Diverse.TypeSpec
                       Data.Diverse.WhichSpec
  build-depends:       base
                     , data-diverse >= 0.2.1 && < 1
                     , hspec >= 2 && < 3
                     , lens >= 4 && < 5
                     , tagged >= 0.8.5 && < 1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/data-diverse
