name:                data-diverse
version:             4.7.0.0
synopsis:            Extensible records and polymorphic variants.
description:         "Data.Diverse.Many" is an extensible record for any size encoded efficiently as (Seq Any).
                     "Data.Diverse.Which" is a polymorphic variant of possibilities encoded as (Int, Any).
                     Provides getters, setters, projection, injection, folds, and catamorphisms;
                     accessed by type, index or label.

                     Refer to [ManySpec.hs](https://github.com/louispan/data-diverse/blob/master/test/Data/Diverse/ManySpec.hs) and [WhichSpec.hs](https://github.com/louispan/data-diverse/blob/master/test/Data/Diverse/WhichSpec.hs) for example usages.

                     Iso, Lens and Prisms are provided in [data-diverse-lens](http://hackage.haskell.org/package/data-diverse-lens)

homepage:            https://github.com/louispan/data-diverse#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2019 Louis Pan
category:            Data, Records
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1, GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Data.Diverse
                       Data.Diverse.AFoldable
                       Data.Diverse.AFunctor
                       Data.Diverse.Case
                       Data.Diverse.CaseFunc
                       Data.Diverse.Cases
                       Data.Diverse.Many
                       Data.Diverse.Many.Internal
                       Data.Diverse.Reduce
                       Data.Diverse.Reiterate
                       Data.Diverse.TypeLevel
                       Data.Diverse.TypeLevel.Internal
                       Data.Diverse.Which
                       Data.Diverse.Which.Internal
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , deepseq >= 1.4
                     , ghc-prim >= 0.5
                     , tagged >= 0.8
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite data-diverse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Diverse.ManySpec
                       Data.Diverse.TypeSpec
                       Data.Diverse.WhichSpec
  build-depends:       base
                     , data-diverse
                     , hspec >= 2
                     , tagged >= 0.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

benchmark data-diverse-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  other-modules:       Data.Diverse.ManyBench
                       Data.Diverse.WhichBench
  build-depends:       base
                     , data-diverse
                     , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/data-diverse
